--- a/.gitignore
+++ b/.gitignore
@@ -242,8 +242,8 @@ pytestdebug.log
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
+#db.sqlite3
+#db.sqlite3-journal
 
 # Flask stuff:
 instance/
