--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 distlib==0.3.4
+dj-database-url==1.0.0
 Django==4.0.6
+django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
