--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,33 @@
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.1
 distlib==0.3.4
 dj-database-url==1.0.0
 Django==4.0.6
+django-cookies-samesite==0.9.0
 django-cors-headers==3.13.0
 django-filter==22.1
+django-storages==1.13.1
 djangorestframework==3.13.1
+djangorestframework-api-key==2.2.0
 djangorestframework-simplejwt==5.2.0
+dropbox==11.34.0
 filelock==3.7.1
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.12.0
 Markdown==3.4.1
 Pillow==9.2.0
 platformdirs==2.5.2
+ply==3.11
 PyJWT==2.4.0
 pytz==2022.1
+requests==2.28.1
 six==1.16.0
 sqlparse==0.4.2
+stone==3.3.1
+ua-parser==0.10.0
+urllib3==1.26.12
 virtualenv==20.14.1
 whitenoise==6.2.0
 zipp==3.8.1
